--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   image_picker: ^0.8.6
   flutter_toastr: ^1.0.3
   firebase_storage: ^11.0.2
+  http: ^0.13.5
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
@@ -67,9 +69,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
